language_tests/outputs/invalid/bitwise_float_operator_type_errors.out
error: cannot apply binary operator 'BitOr' to types double and double
 -> language_tests/source_files/invalid/bitwise_float_operator_type_errors.tr:2:12
	    let _ = 1.0 | 2.0
	            ^^^^^^^^^
error: cannot apply binary operator 'BitXor' to types double and double
 -> language_tests/source_files/invalid/bitwise_float_operator_type_errors.tr:3:12
	    let _ = 1.0 ^ 2.0
	            ^^^^^^^^^
error: cannot apply binary operator 'BitShl' to types double and int32
 -> language_tests/source_files/invalid/bitwise_float_operator_type_errors.tr:4:12
	    let _ = 1.0 << 1
	            ^^^^^^^^
